# Beluga

./: .admissible-fail  .dir-locals.el  .editorconfig  .gitignore  .merlin  .ocamlformat  .ocamlformat-ignore  .readthedocs.yml  .travis-ci.sh  .travis.yml  .travis.yml.disabled  AUTHORS  CHANGES.md  COPYRIGHT  HTML_TEST  INSTALL  LINT  Makefile  OMakefile  OMakeroot  README  README.markdown  README.md  RELEASE  STYLE  TEST  TEST-C  TEST-COVER  TEST-LF  TEST-NOTES  TEST-TWELF  TEST.sh  TODO  VERSION  _tags  all.itarget  beluga.opam  beluga.opam.locked  beluga.opam.template  dune-project  (+16 more)
.build/: OMakefile
.build/lib/: OMakefile
.build/tests/: OMakefile
.build/tools/: OMakefile
.github/workflows/: build-and-deploy-html-documentation.yml  build-and-test.yml
beluga/: index.html
beluga/Beluga/: index.html
beluga/Beluga_html/: index.html
beluga/Beluga_parser/: index.html
beluga/Beluga_syntax/: index.html
beluga/Harpoon/: index.html
beluga/Optparser/: index.html
beluga/Support/: index.html
beluga/Synapx/: index.html
beluga/Syncom/: index.html
beluga/Synext/: index.html
beluga/Synint/: index.html
beluga/Synprs/: index.html
case-studies/: PLACEHOLDER
case-studies/classical-processes/: LICENSE  README.md  cp.cfg  cp_base.bel  cp_dyn.bel  cp_lemmas.bel  cp_linear.bel  cp_statics.bel  cp_thrm.bel
case-studies/harmony-lemma-formalization/: 1_definitions.bel  2_input_rewriting.bel  3_free_output_rewriting.bel  4_bound_output_rewriting.bel  5_theorem1.bel  6_stepcong_lemma.bel  7_reduction_rewriting.bel  8_theorem2.bel  README.md  all.cfg
ci/: travis-ci-before-install.sh  travis-ci-build.sh  travis-ci-debug-mode.sh  travis-ci-install.sh
doc/: beluga-language-specification.tex  belugatex.tex  conf.py  getting-started.rst  index.rst  installation.rst  latex.tex  readme.txt  userguide.tex
examples/: 1.txt  2.txt  README  belFiles.txt  cut-elim-crec-cover.bel  cut-elim-crec.bel  cut-elim.bel  cut-elim1.bel  fol-handbook.bel  out.txt  stlc.bel  subject-red-crec.bel  subject-red.bel  tpcert.bel  tptran.bel
examples-sasybel/: unique.sbel
examples-twelf/: LOG  README
examples1.0/: README  cut-elim-crec.bel  fol-handbook.bel
harpoon-t/: impossible.bel  trivial.bel
ocaml-notes/: CONVENTIONS  INSTALL  MIGRATION  TOOLS
prototype-coverage/: bitype.sml  coverage.sml  env.sml  eval.sml  input.sml  lexer.sml  lib.sml  loop.sml  minml.sml  parse.sml  print.sml  sources.cm  stream.sml  subtype.sml  top.sml  type.sml
sasybel/: README
scripts/: fix-doc-html-charset.sh
src/: Makefile  OMakefile  _tags  beluga.mltop  core.mlpack  dune  frontend.mlpack  index.mld  myocamlbuild.ml
src/beluga/: OMakefile  _tags  beli.ml  beluga.ml  callGraph.ml  check_parser.ml  dune  lex_check.ml  lex_dump.ml  main.ml  parse_check.ml  replay.ml  version.ml
src/core/: #parser.ml#  .#lfcheck.ml  Latex.mli  Latexinductive.mli  Latexrec.mli  OMakefile  _tags  abstract.ml  abstract.mli  annotate.ml  annotate.mli  annotated.ml  apxnorm.ml  associativity.mli  ast.ml  ast.mli  cfg.ml  chatter.ml  check.ml  check.mli  command.ml  command.mli  common.mli  config.ml  context.ml  context.mli  contexts.mli  convSigma.ml  convSigma.mli  core.mllib  core.mlpack  coverage.ml  coverage.mli  ctxsub.ml  ctxsub.mli  cwhnf.ml  cwhnf.mli  debug.ml  debug.mli  decl.ml  (+155 more)
src/harpoon/: automation.ml  automation.mli  cidProgRewrite.ml  cidProgRewrite.mli  dune  harpoonState.ml  harpoonState.mli  iO.ml  iO.mli  inputPrompt.ml  inputPrompt.mli  io.ml  main.ml  options.ml  options.mli  prover.ml  prover.mli  rEPL.ml  rEPL.mli  repl.ml  repl.mli  revisit.ml  revisit.mli  serialization.ml  serialization.mli  session.ml  session.mli  state.ml  state.mli  tactic.ml  tactic.mli  theorem.ml  theorem.mli  translate.ml  translate.mli
src/html/: beluga.css  beluga_html.ml  beluga_html.mli  dune  format.ml  parenthesizer.ml  synext_html_pp.ml  synext_html_pp.mli  synext_html_pp_demonad.ml  synext_html_pp_state.ml  synext_html_pp_state.mli  synext_html_pp_state_demonad.ml
test/: dune  test_beluga.ml
test/beluga/: dune  synext'_constructors.ml  synext'_eq.ml  synext'_json.ml  test_CLF_parser.ml  test_LF_parser.ml  test_ShuntingYard.ml  test_beluga.ml  test_parser_dictionary.ml  test_prettyext'.ml  test_qualified_identifier.ml
test/support/: dune  test.ml  test_list.ml  test_list1.ml  test_list2.ml  test_option.ml  test_support.ml
test/test_centiparsec/: dune  test_centiparsec.ml  test_shunting_yard.ml
test/test_parser/: dune  test_html_pp.ml  test_parser.ml  test_pp.ml  test_shunting_yard.ml  test_sub_parsers.ml
test/test_parser/fixtures/: clf_terms_error.input.bel  clf_terms_ok.input.bel  clf_terms_ok.output.json  clf_types_error.input.bel  clf_types_ok.input.bel  clf_types_ok.output.json  comp_expressions_error.input.bel  comp_expressions_ok.input.bel  comp_expressions_ok.output.json  comp_kinds_error.input.bel  comp_kinds_ok.input.bel  comp_kinds_ok.output.json  comp_types_error.input.bel  comp_types_ok.input.bel  comp_types_ok.output.json  disambiguation_state.json  disambiguation_state_deserialization.ml  disambiguation_state_deserialization.mli  dune  generate_outputs.ml  lf_kinds_error.input.bel  lf_kinds_ok.input.bel  lf_kinds_ok.output.json  lf_terms_error.input.bel  lf_terms_ok.input.bel  lf_terms_ok.output.json  lf_types_error.input.bel  lf_types_ok.input.bel  lf_types_ok.output.json  meta_objects_error.input.bel  meta_objects_ok.input.bel  meta_objects_ok.output.json  meta_types_error.input.bel  meta_types_ok.input.bel  meta_types_ok.output.json  schemas_error.input.bel  schemas_ok.input.bel  schemas_ok.output.json  signatures_error.input.bel  signatures_ok.input.bel
test/test_support/: dune  test_list.ml  test_list1.ml  test_list2.ml  test_option.ml  test_support.ml
test/util/: assert.ml  assert.mli  base_json.ml  base_json.mli  dune  files.ml  files.mli  synapx_json.ml  synext_json.ml  synext_json.mli
tools/: beluga-mode-unicod-only.el  beluga-mode.el  beluga.sublime-syntax  hash_to_percent.sh  synconv  syntax-conv.rb  update_examples.sh
tutorial/: mult.slf  sum.slf  vs.slf
(+3197 files in other folders)
