opam-version: "2.0"
synopsis: "Implementation of contextual modal logic for reasoning with higher-order abstract syntax"
maintainer: "jacob.errington@mail.mcgill.ca"
authors: ["Brigitte Pientka" "Joshua Dunfield" "Andrew Cave" "Jacob Thomas Errington"]
homepage: "https://github.com/Beluga-lang/Beluga"
bug-reports: "https://github.com/Beluga-lang/Beluga/issues"
dev-repo: "git+https://github.com/Beluga-lang/Beluga.git"
license: "GPLv3"

run-test: [
  [ "./TEST" ]
  [ "./TEST -- +htmltest" ]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "exec" "./TEST"] {with-test}
  ["dune" "exec" "./TEST" "--" "--" "+htmltest"] {with-test}
  ["dune" "exec" "./TEST" "--" "--" "+sexp"] {with-test}
]
depends: [
  "gen" "sedlex" "extlib" "dune-build-info" "linenoise"
]
