(executable
 (name main)
 (public_name beluga)
 (package beluga)
 (libraries support beluga beluga_syntax beluga_parser dune-build-info)
 (modules :standard \ callGraph))

(executable
 (name callGraph)
 (public_name beluga_call_graph)
 (package beluga)
 (libraries support beluga beluga_syntax yojson)
 (modules callGraph))
