(library
 (name beluga)
 (package beluga)
 (modules :standard)
 (libraries gen sedlex extlib support unix str beluga_syntax beluga_parser)
 (instrumentation
  (backend bisect_ppx --bisect-silent yes)))

(env
 (dev
  (flags
   (:standard -w +A-z-e-p-44-48-50-58-69-70 -warn-error +A-p-37-48-50-60))))
