(library
 (name harpoon)
 (package beluga)
 (modules :standard \ main)
 (libraries
  sedlex
  linenoise
  support
  optparser
  beluga
  beluga_syntax
  beluga_parser
  dune-build-info)
 (instrumentation
  (backend bisect_ppx --bisect-silent yes)))

(executable
 (name main)
 (public_name harpoon)
 (modules main)
 (package beluga)
 (libraries
  sedlex
  linenoise
  support
  optparser
  harpoon
  beluga
  beluga_syntax
  beluga_parser
  dune-build-info))

(env
 (dev
  (flags
   (:standard -w +A-z-e-p-42-44-48-50-58-70 -warn-error +A-p-37-48-50-60))))
