(library
 (name beluga_html)
 (package beluga)
 (modules :standard)
 (libraries uri tyxml omd support beluga_syntax)
 (preprocess
  (pps tyxml-ppx))
 (instrumentation
  (backend bisect_ppx --bisect-silent yes)))

;; Install the stylesheet at `$(opam var share)/beluga/beluga.css`

(install
 (section share)
 (files beluga.css))
