(test
 (name test_parser)
 (modules :standard)
 (libraries
  ounit2
  beluga_syntax
  beluga_parser
  beluga_html
  support
  util
  test_beluga_parser_fixtures_lib)
 (deps
  fixtures/disambiguation_state.json
  (glob_files fixtures/*.input.bel)
  (glob_files fixtures/*.output.json)
  (glob_files_rec ../../examples/*)))
